--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,8 @@
     "linebreak-style": "off",
     // Enforce tab width of 2 spaces.
     "indent": "off",
-    // Enforce line length to 120 characters.
-    "max-len": ["error", { "code": 120 }],
+    // Enforce line length to 130 characters.
+    "max-len": ["error", { "code": 130 }],
     "react/jsx-filename-extension": "off",
     "no-undef": "off",
     "no-unused-vars": "off",
@@ -25,6 +25,8 @@
     "operator-linebreak": "off",
     "react/jsx-wrap-multilines": "off",
     "comma-dangle": "off",
-    "object-shorthand": "off"
+    "object-shorthand": "off",
+    "no-param-reassign": "off",
+    "no-case-declarations": "off"
   }
 }
